Insert e Update finalizados

--- a/MVC_GerenciadorDeConteudo/Web.config
+++ b/MVC_GerenciadorDeConteudo/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="sqlConn" value="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=cms;Data Source=(LocalDB)\MSSQLLocalDB"/> 
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
