--- a/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
+++ b/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
@@ -167,6 +167,8 @@
     <Content Include="Views\Paginas\Index.cshtml" />
     <Content Include="Views\Paginas\Novo.cshtml" />
     <Content Include="Views\Paginas\Editar.cshtml" />
+    <Content Include="Views\Paginas\Preview.cshtml" />
+    <Content Include="Views\Shared\_Render.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
