--- a/MVC_GerenciadorDeConteudo/Web.config
+++ b/MVC_GerenciadorDeConteudo/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" requestValidationMode="2.0"/>	  
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
